--- a/Exercises/Exercise-03-List.ipynb
+++ b/Exercises/Exercise-03-List.ipynb
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -69,8 +69,6 @@
     "    for j in range(len(a)):\n",
     "        if a[j] == i:\n",
     "            b[i].append(j)\n",
-    "\n",
-    "for i in range(len(b)):\n",
     "    print(f\"Digit {i} : {b[i]} : {len(b[i])}\")"
    ]
   },
@@ -98,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -116,7 +114,7 @@
     "for i in range(n):\n",
     "    l.append(int(input()))\n",
     "print(f\"The list of heights: {l}\")\n",
-    "print(f\"Minimum height is {min(l)} cm, maximum height is {max(l)} cm and the average height is {sum(l)/len(l)} cm.\")"
+    "print(f\"Minimum height is {min(l)} cm, maximum height is {max(l)} cm and the average height is {sum(l)/n} cm.\")"
    ]
   },
   {
@@ -167,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -184,13 +182,13 @@
       "A: [74, 76, 80, 78, 98, 73, 88] 7\n",
       "\n",
       "For class 2:\n",
-      "U: [31, 39, 38, 31, 23, 33, 40, 11, 28, 36, 25, 25, 33, 27, 24, 20, 30, 7, 21] 19\n",
-      "S: [41, 41, 42, 44, 43, 44] 6\n",
-      "E: [46, 49, 48] 3\n",
-      "D: [53, 50, 54] 3\n",
-      "C: [57, 56, 55, 55] 4\n",
-      "B: [60, 69, 61] 3\n",
-      "A: [74, 76, 80, 78, 98, 73, 88, 95, 87, 70] 10\n"
+      "U: [11, 28, 36, 25, 25, 33, 27, 24, 20, 30, 7, 21] 12\n",
+      "S: [42, 44, 43, 44] 4\n",
+      "E: [48] 1\n",
+      "D: [50, 54] 2\n",
+      "C: [] 0\n",
+      "B: [69, 61] 2\n",
+      "A: [95, 87, 70] 3\n"
      ]
     }
    ],
@@ -206,7 +204,7 @@
     "\n",
     "mark_2 = [69, 48, 50, 95, 87, 11, 28, 36, 25, 70, 25, 54, 33, 42, 27, 24, 44, 20, 61, 43, 30, 44, 7, 21]\n",
     "\n",
-    "marks1Sorted = marks2Sorted = {\n",
+    "marks1Sorted = {\n",
     "    \"U\": [],\n",
     "    \"S\": [],\n",
     "    \"E\": [],\n",
@@ -215,6 +213,8 @@
     "    \"B\": [],\n",
     "    \"A\": [],\n",
     "}\n",
+    "\n",
+    "marks2Sorted = marks1Sorted.copy()\n",
     "\n",
     "for i in mark_1:\n",
     "    marks1Sorted[gradeFinder(i)].append(i)\n",
@@ -238,9 +238,9 @@
    "source": [
     "## Exercise 3.4 A Funny Interest\n",
     "\n",
-    "Mr. $B$ was offered an investment opportunity with a company where if he was to invest \\$1000, he was guaranteed a $100%$ yearly interest rate, i.e. Mr. $B$ will be receive \\$2000 after 1 year, inclusive of his capital.  \n",
+    "Mr. $B$ was offered an investment opportunity with a company where if he was to invest \\$1000, he was guaranteed a $100\\%$ yearly interest rate, i.e. Mr. $B$ will be receive \\$2000 after 1 year, inclusive of his capital.  \n",
     "\n",
-    "A friend of his that work in the company offers him another deal: same capital \\$1000, same yearly interest rate of $100%$ but applied quarterly for a year, meaning every 3 months, the applied interest rate to the current amount is $\\frac{100}{4}\\%=25\\%$. So, after 3rd month, his investment becomes \\$1250. After 6th month, it's \\$1562.50. After 9th month, it's \\$1953.13. \n",
+    "A friend of his that work in the company offers him another deal: same capital \\$1000, same yearly interest rate of $100\\%$ but applied quarterly for a year, meaning every 3 months, the applied interest rate to the current amount is $\\frac{100}{4}\\%=25\\%$. So, after 3rd month, his investment becomes \\$1250. After 6th month, it's \\$1562.50. After 9th month, it's \\$1953.13. \n",
     "Under this scheme, how much would Mr. $B$'s investment worth after a full year?\n",
     "\n",
     "Suppose that instead of applying the interest rate of 100% quarterly, a human error caused the interest rate to be applied *hourly* instead, for a full year. How much value will Mr. $B$'s investment worth then?"
@@ -248,7 +248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -396,7 +396,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -419,7 +419,7 @@
     "common_difference = float(input(\"Please input the common difference: \"))\n",
     "number_of_terms = int(input(\"Please input the number of terms: \"))\n",
     "\n",
-    "AS = [first_term + (i - 1) * common_difference for i in range(1, number_of_terms + 1)]\n",
+    "AS = [first_term + (i) * common_difference for i in range(0, number_of_terms)]\n",
     "\n",
     "print(f\"The list containing the first {number_of_terms} terms of the arithmetic sequence are: \")\n",
     "print(AS)\n",
