--- a/Exercises/Exercise-06-Recursion.ipynb
+++ b/Exercises/Exercise-06-Recursion.ipynb
@@ -40,11 +40,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3\n",
+      "2\n",
+      "1\n",
+      "0\n",
+      "3\n",
+      "2\n",
+      "1\n",
+      "0\n"
+     ]
+    }
+   ],
    "source": [
-    "#YOUR CODE HERE"
+    "def iter_your_function(n):\n",
+    "    print(*[n - i for i in range(n + 1)], sep=\"\\n\")\n",
+    "\n",
+    "def rec_your_function(n):\n",
+    "    print(n)\n",
+    "    if n > 0:\n",
+    "        rec_your_function(n - 1)\n",
+    "\n",
+    "iter_your_function(3)\n",
+    "rec_your_function(3)"
    ]
   },
   {
@@ -66,14 +90,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#YOUR CODE HERE"
+    "def iter_your_function(a, b):\n",
+    "    total = 1\n",
+    "    for i in range(abs(b)):\n",
+    "        total *= a\n",
+    "    if b < 0:\n",
+    "        return 1 / total\n",
+    "    return total\n",
+    "\n",
+    "def rec_your_function(a, b):\n",
+    "    if b == 0:\n",
+    "        return 1\n",
+    "    elif b < 0:\n",
+    "        return 1 / rec_your_function(a, -b)\n",
+    "    return a * rec_your_function(a, b - 1)"
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -82,18 +120,38 @@
     "Write a function that takes in a positive integer $n$, and returns the number of digits in $n$. You may not use the built-in `str()` function.\n",
     "\n",
     ">```\n",
-    ">your_function(`12345678910`)\n",
+    ">your_function(12345678910)\n",
     ">11\n",
     ">```"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "11\n"
+     ]
+    }
+   ],
    "source": [
-    "#YOUR CODE HERE"
+    "def iter_your_function(a):\n",
+    "    count = 1\n",
+    "    while a // 10 != 0:\n",
+    "        count += 1\n",
+    "        a //= 10\n",
+    "    return count\n",
+    "\n",
+    "def rec_your_function(a):\n",
+    "    if a // 10 == 0:\n",
+    "        return 1\n",
+    "    return 1 + rec_your_function(a // 10)\n",
+    "\n",
+    "print(rec_your_function(12345678910))"
    ]
   },
   {
@@ -112,11 +170,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#YOUR CODE HERE"
+    "def iter_your_function(a):\n",
+    "    b = \"\"\n",
+    "    for i in range(len(a)):\n",
+    "        b += a[len(a) - i - 1]\n",
+    "    return b\n",
+    "\n",
+    "def rec_your_function(a):\n",
+    "    if a == \"\":\n",
+    "        return \"\"\n",
+    "    return rec_your_function(a[1:]) + a[0]"
    ]
   },
   {
@@ -135,11 +202,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "6\n"
+     ]
+    }
+   ],
    "source": [
-    "#YOUR CODE HERE"
+    "def iter_your_function(a):\n",
+    "    total = 0\n",
+    "    for i in a:\n",
+    "        total += i\n",
+    "    return total\n",
+    "\n",
+    "def rec_your_function(a):\n",
+    "    if a == []:\n",
+    "        return 0\n",
+    "    return a[0] + rec_your_function(a[1:])\n",
+    "\n",
+    "print(rec_your_function([1, 2, 3]))"
    ]
   },
   {
@@ -158,11 +244,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2.0\n"
+     ]
+    }
+   ],
    "source": [
-    "#YOUR CODE HERE"
+    "def iter_your_function(a:list) -> int:\n",
+    "    total = 0\n",
+    "    for i in a:\n",
+    "        total += i\n",
+    "    return total/len(a)\n",
+    "\n",
+    "def rec_your_function(a:list) -> int:\n",
+    "    if len(a) == 1:\n",
+    "        return a[0]\n",
+    "    return (a[0] + (len(a) - 1) * rec_your_function(a[1:])) / len(a)\n",
+    "\n",
+    "print(rec_your_function([1, 2, 3]))"
    ]
   },
   {
@@ -181,11 +286,61 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2354\n"
+     ]
+    }
+   ],
    "source": [
-    "#YOUR CODE HERE"
+    "def iter_your_function(a: list) -> int:\n",
+    "    highest = 0\n",
+    "    for i in a:\n",
+    "        if a > highest:\n",
+    "            highest = a\n",
+    "    return highest\n",
+    "\n",
+    "def rec_your_function(a: list) -> int:\n",
+    "    if len(a) == 1:\n",
+    "        return a[0]\n",
+    "    if a[0] > a[1]:\n",
+    "        a.pop(1)\n",
+    "    else:\n",
+    "        a.pop(0)\n",
+    "    return rec_your_function(a)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17]\n"
+     ]
+    }
+   ],
+   "source": [
+    "nested_list = [1, 2, 3, [4, 5, [6, 7, [8, 9, 10], 11, 12], 13, 14], 15, 16, 17]\n",
+    "def listFlattener(a):\n",
+    "    output_list = []\n",
+    "    for i in a:\n",
+    "        if type(i) == int:\n",
+    "            output_list.append(i)\n",
+    "        else:\n",
+    "            output_list += listFlattener(i)\n",
+    "\n",
+    "    return output_list\n",
+    "\n",
+    "print(listFlattener(nested_list))"
    ]
   }
  ],
@@ -205,12 +360,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.2 (tags/v3.10.2:a58ebcc, Jan 17 2022, 14:12:15) [MSC v.1929 64 bit (AMD64)]"
+   "version": "3.11.1"
   },
   "orig_nbformat": 2,
   "vscode": {
    "interpreter": {
-    "hash": "a42ccb73e7d9bfdf27e036f1d2b8b681e55fc0743cc5586bc2474d4a60f4b886"
+    "hash": "033afebc77ce116f8b4e5adc75a85edec4479cc7d7b8a0d9079b4c316c15d572"
    }
   }
  },
