--- a/Exercises/Exercise-09-Program-Testing-and-Data-Validation.ipynb
+++ b/Exercises/Exercise-09-Program-Testing-and-Data-Validation.ipynb
@@ -39,7 +39,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# YOUR ANSWER HERE"
+    "numbers = [x for x in range(1000)]\n",
+    "i = 0\n",
+    "while True:\n",
+    "    try:\n",
+    "        print(str(numbers[i]))\n",
+    "        i += 1\n",
+    "    except IndexError:\n",
+    "        pass"
    ]
   },
   {
@@ -68,11 +75,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# YOUR ANSWER HERE"
+    "from random import randint\n",
+    "name = \"\"\n",
+    "for i in range(100):\n",
+    "    name = name + str(randint(0, 9))\n",
+    "    name = name + \".txt\"\n",
+    "    try:\n",
+    "        fileHandle = open(name)\n",
+    "    except (FileNotFoundError, OSError):\n",
+    "        continue\n",
+    "    else:\n",
+    "        data = f.read()\n",
+    "        print(data)\n",
+    "        f.close()"
    ]
   },
   {
@@ -90,11 +109,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Input is not a rational number\n"
+     ]
+    }
+   ],
    "source": [
-    "# YOUR ANSWER HERE"
+    "from fractions import Fraction\n",
+    "\n",
+    "while True:\n",
+    "    n = input(\"Input a rational number: \")\n",
+    "    try:\n",
+    "        n = float(Fraction(float(n)))\n",
+    "    except ValueError:\n",
+    "        if n == \"exit\": break\n",
+    "        else: print(\"Input is not a rational number\")\n",
+    "    else:\n",
+    "        with open(\"./resources/rationals.txt\", \"a\") as f:\n",
+    "            f.write(str(n))"
    ]
   },
   {
@@ -125,11 +163,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "'system' has the highest number of occurences, 86\n"
+     ]
+    }
+   ],
    "source": [
-    "# YOUR ANSWER HERE"
+    "with open(\"./resources/WORDS.TXT\", \"r\") as f:\n",
+    "    raw_values = f.read()\n",
+    "raw_values = raw_values.split(\"\\n\")[:-1]\n",
+    "greatestWord = \"\"\n",
+    "greatestValue = 0\n",
+    "for i in range(len(raw_values)):\n",
+    "    try:\n",
+    "        if int(raw_values[i]) > greatestValue:\n",
+    "            greatestValue = int(raw_values[i])\n",
+    "            greatestWord = raw_values[i-1]\n",
+    "    except ValueError:\n",
+    "        continue\n",
+    "\n",
+    "print(f\"'{greatestWord}' has the highest number of occurences, {greatestValue}.\")\n",
+    "        "
    ]
   },
   {
@@ -153,11 +213,54 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 53,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "978-0977304561 is a valid ISBN-13 number\n",
+      "978-1593272838 is a valid ISBN-13 number\n",
+      "978-1316626221 is a valid ISBN-13 number\n",
+      "978-0470481288 is a valid ISBN-13 number\n",
+      "1492032646 is a valid ISBN-10 number\n",
+      "0465026567 is a valid ISBN-10 number\n",
+      "978-0465026562 is a valid ISBN-13 number\n",
+      "0465085989 is a valid ISBN-10 number\n",
+      "978-0465085989 is a valid ISBN-13 number\n",
+      "978-0521419970 is a valid ISBN-13 number\n",
+      "There are 10 valid ISBN numbers\n"
+     ]
+    }
+   ],
    "source": [
-    "# YOUR ANSWER HERE"
+    "import csv\n",
+    "\n",
+    "def ISBN_checker(isbn):\n",
+    "    if isbn[0:7] == \"ISBN-10\":\n",
+    "        isbn = isbn[9:]\n",
+    "        sum = 0\n",
+    "        for i in range(len(isbn)):\n",
+    "            sum += int(isbn[i]) * (10 - i)\n",
+    "        return not sum % 11\n",
+    "    elif isbn[0:7] == \"ISBN-13\":\n",
+    "        isbn = isbn[9:].replace(\"-\", \"\")\n",
+    "        sum = 0\n",
+    "        for i in range(len(isbn)):\n",
+    "            if i != len(isbn) - 1:\n",
+    "                sum += int(isbn[i]) * (3 ** (i % 2))\n",
+    "            else:\n",
+    "                return isbn[i] == str(10 - sum % 10)\n",
+    "\n",
+    "with open(\"./resources/ISBN_EXERCISE.txt\", \"r\") as f:\n",
+    "    reader = csv.reader(f)\n",
+    "    validNum = 0\n",
+    "    for row in reader:\n",
+    "        if ISBN_checker(row[0]):\n",
+    "            print(f\"{row[0][9:]} is a valid {row[0][:7]} number\")\n",
+    "            validNum += 1\n",
+    "    print(f\"There are {validNum} valid ISBN numbers\")"
    ]
   }
  ],
