--- a/Notes/Chapter_05_File_IO.ipynb
+++ b/Notes/Chapter_05_File_IO.ipynb
@@ -76,9 +76,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "I saw my math teacher with a piece of graph paper yesterday. I think he must be plotting    something.\n",
+      "I had   an argument with a 90° angle. It turns out it was right.\n",
+      "A statistician got  soaking wet trying to cross a river. He thought he could cross, because it was one-foot deep on average.\n",
+      "Why is statistics never anyone’s favorite   subject? It’s just average.\n",
+      "ath teacher with a piece of graph paper yesterday. I think he must be plotting    something.\n",
+      "I had   an argument with a 90° angle. It turns out it was right.\n",
+      "A statistician got  soaking wet trying to cross a river. He thought he could cross, because it was one-foot deep on average.\n",
+      "Why is statistics never anyone’s favorite   subject? It’s just average.\n"
+     ]
+    }
+   ],
    "source": [
     "f = open('./resources/mad_joke.txt') \n",
     "s = f.read()\n",
@@ -116,7 +131,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#YOUR_CODE_HERE"
+    "with open('./resources/mad_joke.txt')\n"
    ]
   },
   {
@@ -761,7 +776,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.2"
+   "version": "3.11.1"
   },
   "metadata": {
    "interpreter": {
