--- a/Exercises/Exercise-05-Function.ipynb
+++ b/Exercises/Exercise-05-Function.ipynb
@@ -108,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -172,22 +172,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "a - 2b = (10, -5, 1)\n",
+      "\n",
+      "|a| = 2.449489742783178\n",
+      "\n",
+      "unit vector of b = (-0.8, 0.6, 0.0)\n",
+      "\n",
+      "|3a| + |2b| = 17.348469228349536\n",
+      "\n",
+      "|3a + 2b| = 9.695359714832659\n"
+     ]
+    }
+   ],
    "source": [
     "#DO NOT DELETE THE IMPORT\n",
     "import math\n",
     "\n",
-    "def scalar_times_vector(scalar, vector):\n",
-    "    vector\n",
-    "\n",
+    "def sca_multiple_vec(scalar, vector):\n",
+    "    return(vector[0] * scalar, vector[1] * scalar, vector[2] * scalar)\n",
     "\n",
     "a = (2, 1, 1)\n",
     "b = (-4, 3, 0)\n",
     "\n",
-    "\n",
-    "#YOUR CODE HERE"
+    "print(f\"a - 2b = {vec_add(a, neg(sca_multiple_vec(2, b)))}\\n\")\n",
+    "print(f\"|a| = {mag(a)}\\n\")\n",
+    "print(f\"unit vector of b = {unit(b)}\\n\")\n",
+    "print(f\"|3a| + |2b| = {mag(sca_multiple_vec(3, a)) + mag(sca_multiple_vec(2, b))}\\n\")\n",
+    "print(f\"|3a + 2b| = {mag(vec_add(sca_multiple_vec(3, a), sca_multiple_vec(2, b)))}\")"
    ]
   },
   {
@@ -230,15 +248,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "59.99999999999999\n"
+     ]
+    }
+   ],
    "source": [
     "#DO NOT DELETE THE IMPORT\n",
     "#you can find the cosine inverse of a number x (in radians) -by using the expression math.acos(x) \n",
     "import math\n",
     "\n",
-    "#YOUR CODE HERE"
+    "def angle(a, b):\n",
+    "    return math.degrees(math.acos(abs(dot(a, b)) / (mag(a) * mag(b))))\n",
+    "\n",
+    "print(angle((1, -2, 3), (3, 1, 2)))"
    ]
   },
   {
@@ -267,11 +296,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.40824829046386313\n"
+     ]
+    }
+   ],
    "source": [
-    "#YOUR CODE HERE"
+    "def length_of_proj(a, b):\n",
+    "    return abs(dot(a, unit(b)))\n",
+    "\n",
+    "print(length_of_proj((2, 1, 2), (-2, -2, 4)))"
    ]
   },
   {
@@ -349,11 +389,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2x + 4y + 2z = 6\n"
+     ]
+    }
+   ],
    "source": [
-    "#YOUR CODE HERE"
+    "import math\n",
+    "def plane_equation(c, d, e):\n",
+    "    vector_CD = (d[0] - c[0], d[1] - c[1], d[2] - c[2])\n",
+    "    vector_CE = (e[0] - c[0], e[1] - c[1], e[2] - c[2])\n",
+    "    vector_n = cross(vector_CD, vector_CE)\n",
+    "    return(f\"{vector_n[0]}x + {vector_n[1]}y + {vector_n[2]}z = {dot(c, vector_n)}\")\n",
+    "\n",
+    "c = (0, 1, 1)\n",
+    "d = (-2, 1, 3)\n",
+    "e = (2, 0, 1)\n",
+    "print(plane_equation(c, d, e))"
    ]
   },
   {
@@ -392,11 +450,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "-2.0\n",
+      "None\n"
+     ]
+    }
+   ],
    "source": [
-    "#YOUR CODE HERE"
+    "def gradient(a, b):\n",
+    "    return a[1] - b[1] / a[0] - b[0]\n",
+    "\n",
+    "def gradient_secant(x_point, x_difference):\n",
+    "    gradient((x_point, (x_point ** 2) + (5 * x_point)), (x_point + x_difference, (x_point + x_difference ** 2) + (5 * x_point + x_difference)))\n",
+    "\n",
+    "print(gradient((5, 1), (2, 5)))\n",
+    "print(gradient_secant(5, 0.01))"
    ]
   },
   {
@@ -419,9 +493,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "#YOUR CODE HERE"
-   ]
+   "source": []
   }
  ],
  "metadata": {
@@ -440,7 +512,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.2"
+   "version": "3.11.1"
   },
   "orig_nbformat": 2,
   "vscode": {
