--- a/Exercises/Exercise-07-Dictionary_and_Set.ipynb
+++ b/Exercises/Exercise-07-Dictionary_and_Set.ipynb
@@ -40,11 +40,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n"
+     ]
+    }
+   ],
    "source": [
-    "#YOUR CODE HERE"
+    "def prime_iteration(a):\n",
+    "    if a == 1:\n",
+    "        return False\n",
+    "    for i in range(2, a - 1):\n",
+    "        if (a / i).is_integer():\n",
+    "            return False\n",
+    "    return True\n",
+    "\n",
+    "def prime_recursive(a, divisor = 2):\n",
+    "    \n",
+    "    if a == 1:\n",
+    "        return False\n",
+    "    elif a == divisor or a == 2:\n",
+    "        return True\n",
+    "    elif (a / divisor).is_integer():\n",
+    "        return False\n",
+    "    else:\n",
+    "        return prime_recursive(a, divisor + 1)\n",
+    "    \n",
+    "print(prime_recursive(3))"
    ]
   },
   {
@@ -64,11 +91,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "one two three four five six seven eight nine \n",
+      "one two three four five six seven eight nine\n"
+     ]
+    }
+   ],
    "source": [
-    "#YOUR CODE HERE"
+    "def word_maker_iteration(n):\n",
+    "    digits = [\"zero\", \"one\", \"two\", \"three\", \"four\", \"five\", \"six\", \"seven\", \"eight\", \"nine\"]\n",
+    "    output = \"\"\n",
+    "    for i in str(n):\n",
+    "        output += digits[int(i)] + \" \"\n",
+    "    return output\n",
+    "\n",
+    "print(word_maker_iteration(123456789))\n",
+    "\n",
+    "def word_maker_recursive(n):\n",
+    "    digits = [\"zero\", \"one\", \"two\", \"three\", \"four\", \"five\", \"six\", \"seven\", \"eight\", \"nine\"]\n",
+    "    n = str(n)\n",
+    "    if len(n) == 1:\n",
+    "        return digits[int(n)]\n",
+    "    # return digits[int(n[0])] + \" \" + word_maker_recursive(n[1:])\n",
+    "    return word_maker_recursive(n[:-1]) + \" \" + digits[int(n[-1])]\n",
+    "\n",
+    "print(word_maker_recursive(123456789))"
    ]
   },
   {
@@ -110,11 +163,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 43,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "User not found\n"
+     ]
+    }
+   ],
    "source": [
-    "#YOUR CODE HERE"
+    "passwords = {\n",
+    "    \"user1\": \"password1\",\n",
+    "    \"user2\": \"password2\",\n",
+    "    \"user3\": \"password3\",\n",
+    "    \"user4\": \"password4\",\n",
+    "    \"user5\": \"password5\"\n",
+    "}\n",
+    "\n",
+    "un_in = input(\"Enter username: \")\n",
+    "pw_in = input(\"Enter password: \")\n",
+    "\n",
+    "for u, p in passwords.items():\n",
+    "    if un_in == u:\n",
+    "        if pw_in == p:\n",
+    "            print(\"You are in\")\n",
+    "            break\n",
+    "        print(\"Wrong password\")\n",
+    "        break\n",
+    "else:\n",
+    "    print(\"User not found\")"
    ]
   },
   {
@@ -139,11 +219,56 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 45,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Counts of matched numbers: 6\n"
+     ]
+    }
+   ],
    "source": [
-    "#YOUR CODE HERE"
+    "def match_count(win_nums, your_nums):\n",
+    "    win_nums = win_nums.split()\n",
+    "    your_nums = your_nums.split()\n",
+    "    matches = 0\n",
+    "    for i in win_nums:\n",
+    "        for o in your_nums:\n",
+    "            if i == o:\n",
+    "                matches += 1\n",
+    "    return matches    \n",
+    "\n",
+    "your_nums = input(\"Enter your Toto numbers separated by space: \")\n",
+    "print(f\"Count of matched numbers: {match_count('7 20 29 41 47 49', your_nums)}\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Count of matched numbers: 0\n"
+     ]
+    }
+   ],
+   "source": [
+    "def match_count(win_nums, your_nums):\n",
+    "    win_nums = win_nums.split()\n",
+    "    your_nums = your_nums.split()\n",
+    "    winning_dict = {}\n",
+    "    for i in win_nums:\n",
+    "        winning_dict[i]= your_nums.count(i)\n",
+    "    return sum(winning_dict.values()) \n",
+    "\n",
+    "your_nums = input(\"Enter your Toto numbers separated by space: \")\n",
+    "print(f\"Count of matched numbers: {match_count('7 20 29 41 47 49', your_nums)}\")\n"
    ]
   },
   {
@@ -175,11 +300,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 38,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 4]\n"
+     ]
+    }
+   ],
    "source": [
-    "#YOUR CODE HERE"
+    "def factorFinder(a):return [i for i in range(1,a+1) if a%i==0]\n",
+    "\n",
+    "def factorFinderSqrtN(a):return sorted(list(set([item for sublist in [[i,int(a/i)] for i in range(1,int(a**0.5)) if a%i==0] for item in sublist])))\n",
+    "\n",
+    "print(factorFinderSqrtN(4))\n",
+    "\n",
+    "def gcd(a, b):\n",
+    "    greatest = 0\n",
+    "    a = factorFinder(a)\n",
+    "    b = factorFinder(b)\n",
+    "    for i in a:\n",
+    "        for j in b:\n",
+    "            if i == j:\n",
+    "                greatest = i\n",
+    "                break\n",
+    "    return greatest\n",
+    "\n",
+    "def gcdSets(a, b): return max(set(factorFinder(a)).intersection(set(factorFinder(b))))"
    ]
   },
   {
@@ -218,11 +368,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\n"
+     ]
+    }
+   ],
    "source": [
-    "#YOUR CODE HERE"
+    "def euclidean_algo_iterative(a, b):\n",
+    "    # a, b = (a, b) if a > b else (b, a)\n",
+    "    while a % b != 0:\n",
+    "        b, a = (a % b), b\n",
+    "    return b\n",
+    "\n",
+    "print(euclidean_algo_iterative(4, 10))\n",
+    "    \n",
+    "def euclidean_algo_recursive(a, b):\n",
+    "    a, b = (a, b) if a > b else (b, a)\n",
+    "    if b == 0:\n",
+    "        return a\n",
+    "    return euclidean_algo_recursive(b, a % b)"
    ]
   },
   {
@@ -235,11 +405,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "12"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "#YOUR CODE HERE"
+    "def gcd_list(N):\n",
+    "    gcd = N[0]\n",
+    "    for n in N[1:]:\n",
+    "        gcd = euclidean_algo_iterative(gcd, n)\n",
+    "    return gcd\n",
+    "\n",
+    "gcd_list([60, 24, 360])"
    ]
   }
  ],
@@ -259,12 +446,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.2 (tags/v3.10.2:a58ebcc, Jan 17 2022, 14:12:15) [MSC v.1929 64 bit (AMD64)]"
+   "version": "3.11.1"
   },
   "orig_nbformat": 2,
   "vscode": {
    "interpreter": {
-    "hash": "a42ccb73e7d9bfdf27e036f1d2b8b681e55fc0743cc5586bc2474d4a60f4b886"
+    "hash": "033afebc77ce116f8b4e5adc75a85edec4479cc7d7b8a0d9079b4c316c15d572"
    }
   }
  },
