--- a/Notes/Chapter_04_Functions.ipynb
+++ b/Notes/Chapter_04_Functions.ipynb
@@ -242,7 +242,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "Mo moremorere #YOUR CODE HERE"
+    "def my_max(a, b):\n",
+    "    if a > b:\n",
+    "        return a\n",
+    "    return b"
    ]
   },
   {
@@ -260,7 +263,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#YOUR CODE HERE"
+    "def my_print(n):\n",
+    "    for i in range(n + 1):\n",
+    "        print(i)"
    ]
   },
   {
@@ -278,7 +283,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#YOUR CODE HERE"
+    "def my_multiply(a, b):\n",
+    "    return sum([a for i in range(b)])\n",
+    "\n",
+    "def better_multiply(a, b):\n",
+    "    return int(a / (b ** -1))"
    ]
   },
   {
@@ -325,7 +334,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#YOUR CODE HERE"
+    "def simple_add(a = 5, c = 20):\n",
+    "    return a + c"
    ]
   },
   {
@@ -345,7 +355,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "simple_add(c=30,10,20)"
+    "simple_add(c=30,10,20):"
    ]
   },
   {
@@ -371,11 +381,11 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "A function may return **multiple** values. When multiple values are returned, they are packed into a tuple. "
-   ],
-   "cell_type": "markdown",
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
@@ -391,11 +401,11 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "If a function has no `return` statement in its body, or its `return` statement doesn't followed by any object, the function returns a `None` object."
-   ],
-   "cell_type": "markdown",
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
@@ -411,6 +421,8 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "## 4.2 Variable Scope - Global vs Local\n",
     "\n",
@@ -428,9 +440,7 @@
     "* Global variables can be accessed throughout the program body.\n",
     "\n",
     "#### Example "
-   ],
-   "cell_type": "markdown",
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
@@ -466,20 +476,20 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "In Python, if we declare the variable as global and again declare inside the function with the same name, it behaves like a local variable and it won’t be considered as the global one."
-   ],
-   "cell_type": "markdown",
-   "metadata": {}
+   ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "What if same name of variable that has appeared in the global scope is attempted to be used in a body of a function (e.g., in local scope)?\n",
     "\n",
     "#### Example"
-   ],
-   "cell_type": "markdown",
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
@@ -497,13 +507,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "The `UnboundLocalError: local variable referenced before assignment` error is raised when you try to assign a value to a local variable before it has been declared in the local scope. A variable can't be both local and global inside a function. So Python decides that we want a local variable due to the assignment to `x` inside `foo()`, so the first print statement before the definition of `x` inside the function body throws the error message above. "
-   ],
-   "cell_type": "markdown",
-   "metadata": {}
+   ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "To **modify** a global variable in a function, you can use the `global` keyword in the body of the function. Syntax is\n",
     ">```\n",
@@ -511,9 +523,7 @@
     ">```\n",
     "\n",
     "#### Example"
-   ],
-   "cell_type": "markdown",
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
@@ -533,11 +543,11 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "In Python, variables that are only **referenced** inside a function are implicitly global. If a variable is assigned a value anywhere within the function’s body, it’s assumed to be a local unless explicitly declared as global. [Link to documentation here.](https://docs.python.org/3/faq/programming.html#what-are-the-rules-for-local-and-global-variables-in-python)"
-   ],
-   "cell_type": "markdown",
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
@@ -569,14 +579,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "Reference:\n",
     "https://stackoverflow.com/questions/23458854/python-why-is-it-said-that-variables-that-are-only-referenced-are-implicitly-g"
-   ],
-   "cell_type": "markdown",
-   "metadata": {}
+   ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "## 4.3 Recursion\n",
     "\n",
@@ -606,9 +618,7 @@
     ">2<br>\n",
     ">1<br>\n",
     ">Done!<br>"
-   ],
-   "cell_type": "markdown",
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
@@ -626,6 +636,8 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "How can we convert above function `count_down()` into a recursive function?\n",
     "\n",
@@ -643,9 +655,7 @@
     "<u>Thus, </u>\n",
     "* In the recursive function, it check termination condiction `n > 0`.\n",
     "* If termination condition is true, it prints `Done`, else it prints current `n` value and recurses (call its own function). "
-   ],
-   "cell_type": "markdown",
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
@@ -664,6 +674,8 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "The `factorial` function is defined to be a function that accepts integer `n` as a parameter and return the product of the numbers from 1 to `n`. Furthermore, we define `factorial(0)` to be the value 1. In pseudocode, we have the following:\n",
     "\n",
@@ -690,9 +702,7 @@
     ">6<br>\n",
     ">factorial(0)<br>\n",
     ">1<br>"
-   ],
-   "cell_type": "markdown",
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
@@ -700,10 +710,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#YOUR CODE HERE"
+    "def factorial(n):\n",
+    "    a = 1\n",
+    "    while n > 0:\n",
+    "        a *= n\n",
+    "        n -= 1\n",
+    "    return a\n",
+    "\n",
+    "print(factorial(10))\n"
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "**Question:** \n",
     "\n",
@@ -731,20 +750,34 @@
     ">6<br>\n",
     ">recursive_factorial(0)<br>\n",
     ">1<br>"
-   ],
-   "cell_type": "markdown",
-   "metadata": {}
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#YOUR CODE HERE"
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3628800\n"
+     ]
+    }
+   ],
+   "source": [
+    "def recursive_factorial(n):\n",
+    "    if n == 1:\n",
+    "        return n\n",
+    "    return n * recursive_factorial(n-1)\n",
+    "\n",
+    "print(recursive_factorial(10))"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "### Example The Fibonacci Sequence \n",
     "\n",
@@ -762,22 +795,42 @@
     ">1<br>\n",
     ">fib_loop(2)<br>\n",
     ">1<br>\n",
-    ">fib_loop(5)<br>\n",
+    ">fib_loop(6)<br>\n",
     ">8<br>"
-   ],
-   "cell_type": "markdown",
-   "metadata": {}
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# YOUR CODE HERE"
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 75,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "13\n"
+     ]
+    }
+   ],
+   "source": [
+    "def fib_loop(n):\n",
+    "    if n == 1 or n == 2:\n",
+    "        return 1\n",
+    "    nMinusOne = 1\n",
+    "    nMinusTwo = 1\n",
+    "    num = 0\n",
+    "    for i in range(2, n):\n",
+    "        num = nMinusOne + nMinusTwo\n",
+    "        nMinusTwo = nMinusOne\n",
+    "        nMinusOne = num\n",
+    "    return num\n",
+    "\n",
+    "print(fib_loop(7))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "**Question:** \n",
     "\n",
@@ -802,20 +855,32 @@
     ">1<br>\n",
     ">recursive_fib(5)<br>\n",
     ">8<br>"
-   ],
-   "cell_type": "markdown",
-   "metadata": {}
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# YOUR CODE HERE"
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 81,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "55\n"
+     ]
+    }
+   ],
+   "source": [
+    "def recursive_fib(n):\n",
+    "    if n == 1 or n == 2:\n",
+    "        return 1\n",
+    "    return recursive_fib(n - 1) + recursive_fib(n - 2)\n",
+    "print(recursive_fib(10))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "### 4.3.0 How Function Calls Work\n",
     "\n",
@@ -839,33 +904,47 @@
     "- https://sites.cs.ucsb.edu/~pconrad/cs8/topics.beta/theStack/02/\n",
     "- https://forum.rpg.net/index.php?threads/using-mtgs-stack-as-a-game-rule.793647/\n",
     "- https://www.youtube.com/watch?v=TuMWC26z6Vs"
-   ],
-   "cell_type": "markdown",
-   "metadata": {}
+   ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "### 4.3.1 Visualizing Recursion via Frames\n",
     "\n",
     "<center>\n",
     "<img src=\".\\images\\frames-recursion.png\"><br>\n",
     "</center>"
-   ],
-   "cell_type": "markdown",
-   "metadata": {}
+   ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "### 4.3.2 Visualizing Recursion via Trace Tree\n",
     "\n",
     "<center>\n",
     "<img src=\".\\images\\trace-tree-recursion.png\"><br>\n",
     "</center>"
-   ],
-   "cell_type": "markdown",
-   "metadata": {}
+   ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 83,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'visualiser'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[83], line 3\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[39m# Author: Bishal Sarang\u001b[39;00m\n\u001b[1;32m      2\u001b[0m \u001b[39m# Import Visualiser class from module visualiser\u001b[39;00m\n\u001b[0;32m----> 3\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mvisualiser\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mvisualiser\u001b[39;00m \u001b[39mimport\u001b[39;00m Visualiser \u001b[39mas\u001b[39;00m vs\n\u001b[1;32m      5\u001b[0m \u001b[39m# Add decorator\u001b[39;00m\n\u001b[1;32m      6\u001b[0m \u001b[39m# Decorator accepts optional arguments: ignore_args , show_argument_name, show_return_value and node_properties_kwargs\u001b[39;00m\n\u001b[1;32m      7\u001b[0m \u001b[39m@vs\u001b[39m(node_properties_kwargs\u001b[39m=\u001b[39m{\u001b[39m\"\u001b[39m\u001b[39mshape\u001b[39m\u001b[39m\"\u001b[39m:\u001b[39m\"\u001b[39m\u001b[39mrecord\u001b[39m\u001b[39m\"\u001b[39m, \u001b[39m\"\u001b[39m\u001b[39mcolor\u001b[39m\u001b[39m\"\u001b[39m:\u001b[39m\"\u001b[39m\u001b[39m#f57542\u001b[39m\u001b[39m\"\u001b[39m, \u001b[39m\"\u001b[39m\u001b[39mstyle\u001b[39m\u001b[39m\"\u001b[39m:\u001b[39m\"\u001b[39m\u001b[39mfilled\u001b[39m\u001b[39m\"\u001b[39m, \u001b[39m\"\u001b[39m\u001b[39mfillcolor\u001b[39m\u001b[39m\"\u001b[39m:\u001b[39m\"\u001b[39m\u001b[39mgrey\u001b[39m\u001b[39m\"\u001b[39m})\n\u001b[1;32m      8\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mfib\u001b[39m(n):\n",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'visualiser'"
+     ]
+    }
+   ],
    "source": [
     "# Author: Bishal Sarang\n",
     "# Import Visualiser class from module visualiser\n",
@@ -887,20 +966,18 @@
     "\n",
     "if __name__ == \"__main__\":\n",
     "    main()"
-   ],
-   "cell_type": "code",
-   "metadata": {},
-   "execution_count": null,
-   "outputs": []
+   ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "Recursion is very powerful, and often results in a very elegant solution to a problem. However, as explained previously, each time a routine is called, it invokes a new stack. Thus, because of the stack overheads, recursive algorithms may not be as efficient as iterative solutions. In contrast, an iterative solution typically only utilises a single stack. Additionally, if many recursive calls are made, stack space could run out. This is known as a stack overflow."
-   ],
-   "cell_type": "markdown",
-   "metadata": {}
+   ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "### 4.3.3 Recursion Summary\n",
     "\n",
@@ -929,20 +1006,14 @@
     "sys.setrecursionlimit(1050)\n",
     "fib(1050)\n",
     "```"
-   ],
-   "cell_type": "markdown",
-   "metadata": {}
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "name": "python3",
-   "display_name": "Python 3.9.1 64-bit",
-   "metadata": {
-    "interpreter": {
-     "hash": "dcacb0086e9a4f4eabd41c33bf4faac5ea0a3337ed3f5eff0680afa930572c04"
-    }
-   }
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -954,9 +1025,14 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.1-final"
+   "version": "3.11.1"
   },
-  "orig_nbformat": 2
+  "orig_nbformat": 2,
+  "vscode": {
+   "interpreter": {
+    "hash": "033afebc77ce116f8b4e5adc75a85edec4479cc7d7b8a0d9079b4c316c15d572"
+   }
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 2
