--- a/Exercises/Exercise-13-Algorithm-Representation.ipynb
+++ b/Exercises/Exercise-13-Algorithm-Representation.ipynb
@@ -35,12 +35,61 @@
    ]
   },
   {
+   "cell_type": "raw",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "INPUT FirstNumber\n",
+    "INPUT LastNumber\n",
+    "WHILE FirstNumber <= LastNumber DO\n",
+    "    OUTPUT FirstNumber\n",
+    "    FirstNumber <- FirstNumber + 1\n",
+    "ENDWHILE"
+   ]
+  },
+  {
+   "cell_type": "raw",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "INPUT FirstNumber\n",
+    "INPUT LastNumber\n",
+    "REPEAT\n",
+    "    OUTPUT FirstNumber\n",
+    "    FirstNumber <- FirstNumber + 1\n",
+    "UNTIL FirstNumber > LastNumber"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
    "outputs": [],
    "source": [
-    "#YOUR ANSWER HERE"
+    "FirstNumber = int(input())\n",
+    "LastNumber = int(input())\n",
+    "while FirstNumber <= LastNumber:\n",
+    "    print(FirstNumber)\n",
+    "    FirstNumber += 1"
    ]
   },
   {
@@ -60,12 +109,62 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "cell_type": "raw",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
    "source": [
-    "#YOUR ANSWER HERE"
+    "OUTPUT \"Please input a number: \"\n",
+    "INPUT number\n",
+    "number <- TYPECAST number TO REAL\n",
+    "IF number > 0 \n",
+    "    THEN\n",
+    "    OUTPUT number\n",
+    "    ELSE\n",
+    "        IF number < 0\n",
+    "            THEN\n",
+    "                OUTPUT number POWER 2\n",
+    "                OUTPUT number POWER (1 / 2)\n",
+    "        ENDIF\n",
+    "ENDIF"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "[![](https://mermaid.ink/img/pako:eNptkVFrgzAQx7_KcU8WWtz6KKPDatoKm4pNGSXpQ6bpKqs6UmUM9bvPRmVlW56S-_3433GpMS4SiRYez8VnfBKqBOryHLpjG2xL7YgeJsMbZrMFLJnp-eGOQl5lr1KZhx4uNXQY3YfEsbcjBhpAROynwXK05dYDXMAdPLY9cq-o2ctLA4SZwY7-7dErftHAakx4uElY_SSsfyVAGLyQCOZj0lrPsWEmx_884x5MmE84jj7Rvmcw4rvjOjZ97aY36Nk8nGImVSbSpFtrfeUcy5PMJEeruyZCvXPkedt5oiqL7Vceo1WqSk6x-khEKd1UvCmRoXUU50tXlUlaFuq5_yf9Xe03gbp-kQ?type=png)](https://mermaid.live/edit#pako:eNptkVFrgzAQx7_KcU8WWtz6KKPDatoKm4pNGSXpQ6bpKqs6UmUM9bvPRmVlW56S-_3433GpMS4SiRYez8VnfBKqBOryHLpjG2xL7YgeJsMbZrMFLJnp-eGOQl5lr1KZhx4uNXQY3YfEsbcjBhpAROynwXK05dYDXMAdPLY9cq-o2ctLA4SZwY7-7dErftHAakx4uElY_SSsfyVAGLyQCOZj0lrPsWEmx_884x5MmE84jj7Rvmcw4rvjOjZ97aY36Nk8nGImVSbSpFtrfeUcy5PMJEeruyZCvXPkedt5oiqL7Vceo1WqSk6x-khEKd1UvCmRoXUU50tXlUlaFuq5_yf9Xe03gbp-kQ)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1.0\n",
+      "(6.123233995736766e-17+1j)\n"
+     ]
+    }
+   ],
+   "source": [
+    "number = input()\n",
+    "number = float(number)\n",
+    "if number > 0:\n",
+    "    print(number)\n",
+    "else:\n",
+    "    if number < 0:\n",
+    "        print(number ** 2)\n",
+    "        print(number ** (1/2))"
    ]
   },
   {
@@ -98,12 +197,54 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
    "source": [
-    "#YOUR ANSWER HERE"
+    "|m|n|r|OUTPUT|\n",
+    "|---|---|---|---|\n",
+    "|69||||\n",
+    "||12|||\n",
+    "|||9||\n",
+    "|12||||\n",
+    "||9|||\n",
+    "|||3||\n",
+    "|9||||\n",
+    "||3|||\n",
+    "|||0||\n",
+    "||||3|\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3\n"
+     ]
+    }
+   ],
+   "source": [
+    "def mystery(m, n):\n",
+    "    r = m - int(m / n) * n\n",
+    "    if r == 0:\n",
+    "        return n\n",
+    "    else:\n",
+    "        return mystery(n, r)\n",
+    "\n",
+    "print(mystery(69, 12))"
    ]
   },
   {
@@ -167,7 +308,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
    "outputs": [],
    "source": [
     "#YOUR ANSWER HERE"
@@ -204,12 +352,21 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
    "source": [
-    "#YOUR ANSWER HERE"
+    "1. *`Total` gets reset to 0 at every iteration, causing `Total` only contain the value of the last marks*\n",
+    "2. *This is a logic error*\n",
+    "3. *Error Case: -10, Boundary Case: 0, Normal Case:10*\n",
+    "4. "
    ]
   },
   {
@@ -239,6 +396,36 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "81\n",
+      "1\n"
+     ]
+    }
+   ],
+   "source": [
+    "def f(a, b):\n",
+    "    if b == 0:\n",
+    "        return 1\n",
+    "    elif b == 1:\n",
+    "        return a\n",
+    "    x = f(a, b // 2)\n",
+    "    if b % 2 == 0:\n",
+    "        return x ** 2\n",
+    "    else:\n",
+    "        return x ** 2 * a\n",
+    "    \n",
+    "print(f(3, 4))\n",
+    "print(f(0, 0))"
+   ]
+  },
+  {
    "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
@@ -251,18 +438,42 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
    "source": [
-    "#YOUR CODE HERE"
+    "1. *Recursion is when a function calls itself in its code, this is evident on line 7 where the function f calls itself.*\n",
+    "2.\n",
+    "|function call|a|b|x|return|\n",
+    "|---|---|---|---|---|\n",
+    "|1|3||||\n",
+    "|||4|||\n",
+    "||||f(3, 2)||\n",
+    "|2|3||||\n",
+    "|||2|||\n",
+    "||||f(3, 1)||\n",
+    "|3|3||||\n",
+    "|||1|||\n",
+    "|||||3|\n",
+    "|2|||3||\n",
+    "|||||9|\n",
+    "|3|||9||\n",
+    "|||||81|\n",
+    "3. To find the a ^ b\n",
+    "4. 0 ^ 0 is not actually 1"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "main",
    "language": "python",
    "name": "python3"
   },
@@ -276,11 +487,17 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.1"
+   "version": "3.8.16"
   },
-  "vscode": {
-   "interpreter": {
-    "hash": "033afebc77ce116f8b4e5adc75a85edec4479cc7d7b8a0d9079b4c316c15d572"
+  "polyglot_notebook": {
+   "kernelInfo": {
+    "defaultKernelName": "csharp",
+    "items": [
+     {
+      "aliases": [],
+      "name": "csharp"
+     }
+    ]
    }
   }
  },
